syntax = "proto3";

package hrms;
option go_package = "hrms/proto;hrms";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Employee message
message Employee {
  uint64 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  google.protobuf.Timestamp date_of_birth = 6;
  string employment_type = 7;
  string status = 8;
  google.protobuf.Timestamp hired_date = 9;
  uint64 organization_id = 10;
  uint64 department_id = 11;
  uint64 designation_id = 12;
  uint64 reports_to = 13;
}

// Request for creating an employee
message CreateEmployeeRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone = 4;
  google.protobuf.Timestamp date_of_birth = 5;
  string employment_type = 6;
  google.protobuf.Timestamp hired_date = 7;
  uint64 organization_id = 8;
  uint64 department_id = 9;
  uint64 designation_id = 10;
  uint64 reports_to = 11;
}

// Response with employee details
message EmployeeResponse {
  Employee employee = 1;
}

// Request for fetching an employee by ID
message GetEmployeeRequest {
  uint64 employee_id = 1;
}

// Request for updating an employee
message UpdateEmployeeRequest {
  uint64 employee_id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone = 4;
  optional string employment_type = 5;
  optional string status = 6;
}

// Request for deleting an employee
message DeleteEmployeeRequest {
  uint64 employee_id = 1;
  string reason = 2;
}

// gRPC Service for Employees
service EmployeeService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (EmployeeResponse);
  rpc GetEmployee(GetEmployeeRequest) returns (EmployeeResponse);
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (google.protobuf.Empty);
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (google.protobuf.Empty);
}
